--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-!DOCTYPE html>
-
 <html lang="en">
     <head>
         <link href="styles.css" rel="stylesheet">
-        <title><b>THE INDUSTRIAL REVOLUTION</b></title>
+        <title>THE INDUSTRIAL REVOLUTION</title>
         <link href="styles.css" rel="stylesheet">
     </head>
 
 <body>
     <h1>What is it?</h1>
     <p>The Industrial Revolution is the name historians have given to the period in history when there was a large and fast change in the way things were made. This meant that instead of things being hand made in small workshops, they were made more cheaply in large quantities by machines in factories. Products being made in large quantity now meant that they were sold for less. It also led to rise in the rate of population growth. It is usually thought as starting in the 1760s.</p>
+    
+    <h1>Origins</h1>
+        <p>Britain was at the forefront of a technological revolution in the 18th century. In particular, the County of Shropshire was important, for it had both minerals (e.g. iron ore and coal) and transport on the River Severn.</p>
+        <p>In the mid-18th century Britain was the world's leading trading nation. It controlled a global trading empire with colonies in North America and Africa, and with some political influence on the Indian subcontinent, through the activities of the East India Company. The development of trade and the rise of business were major causes of the Industrial Revolution.</p>
+        <p>By the early 19th century, America picked up on the trend and started mass producing cotton</p>
+        <p>The emmergence of newfound ways to produce goods lead to the formation of various jobs and boosted economy</p>
+    
+        <h2>Prominent Inventions<h2>
+        <ul>
+        <li>The steam engine by Jmes Watt</li>
+        <li>The internal combustion engine by Nicolaus Otto</li>
+        <li>The electric motor by Michael Faraday</li>
+        <li>The sewing machine by wWalter Hunt</li>
+        <li>The spinning jetty by James Hargreaves</li>
+        </ul>
 </body>
