--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                      </a>
                  </li>
    <h1>The Industrial Revolution</h1>
-      <img>industrial revolution.jpg</img>
+        <img src="industrial_revolution.jpg" alt="Industrial Revolution">
     <h2>What is it?</h2>
     <p>The Industrial Revolution is the name historians have given to the period in history when there was a large and fast change in the way things were made. This meant that instead of things being hand made in small workshops, they were made more cheaply in large quantities by machines in factories. Products being made in large quantity now meant that they were sold for less. It also led to rise in the rate of population growth. It is usually thought as starting in the 1760s.</p>
     
