--- a/extra.html
+++ b/extra.html
@@ -1,1 +1,8 @@
-
+<html lang="en">
+    <head>
+        <link href="styles.css" rel="stylesheet">
+        <title>Extra Information and Pictures</title>
+        <link href="styles.css" rel="stylesheet">
+    </head>
+  
+  
