--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
         <li>The spinning jetty by James Hargreaves</li>
         </ul>
             
-     
+     <button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+  var x = document.createElement("BUTTON");
+  var t = document.createTextNode("Click me");
+  x.appendChild(t);
+  document.body.appendChild(x);
+}
+</script>
 </body>
