--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li>The spinning jetty by James Hargreaves</li>
         </ul>
             
-     <button onclick="myFunction()">Try it</button>
+     <button onclick="myFunction()">Want More Info?</button>
 
 <script>
 function myFunction() {
